--- a/Modelbouwer/Resources/Styles/General.xaml
+++ b/Modelbouwer/Resources/Styles/General.xaml
@@ -259,7 +259,7 @@
 					<Rectangle
 						Margin="2"
 						SnapsToDevicePixels="true"
-						Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+						Stroke="Blue"
 						StrokeDashArray="1 2"
 						StrokeThickness="1"
 						/>
@@ -275,7 +275,7 @@
 					<Rectangle
 						Margin="14,0,0,0"
 						SnapsToDevicePixels="true"
-						Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+						Stroke="Green"
 						StrokeDashArray="1 2"
 						StrokeThickness="1"
 						/>
@@ -290,8 +290,9 @@
 		<Setter Property="Background" Value="{DynamicResource OptionMark.Static.Background}" />
 		<Setter Property="BorderBrush" Value="{DynamicResource OptionMark.Static.Border}" />
 		<Setter Property="BorderThickness" Value="1" />
-		<Setter Property="FocusVisualStyle" Value="{DynamicResource FocusVisual}" />
+		<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
 		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+		<Setter Property="IsEnabled" Value="True" />
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type CheckBox}">
