--- a/Modelbouwer/View/ProductManagement.xaml
+++ b/Modelbouwer/View/ProductManagement.xaml
@@ -17,6 +17,7 @@
 	>
 
 	<Page.Resources>
+		<converter:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
 		<converter:IntToBoolConverter x:Key="IntToBoolConverter" />
 		<converter:IndentToPaddingConverter x:Key="IndentToBoolConverter" />
 		<converter:ByteToImageConverter x:Key="ByteToImageConverter" />
@@ -106,6 +107,8 @@
 						ColumnSizer="Star"
 						FilterRowPosition="Top"
 						ItemsSource="{Binding ProductViewModel.Product, Mode=TwoWay}"
+						Loaded="ProductDataGridLoaded"
+						SelectedIndex="0"
 						SelectedItem="{Binding ProductViewModel.SelectedProduct, Mode=TwoWay}"
 						SelectionChanged="ChangedProduct"
 						SortClickAction="DoubleClick"
@@ -205,9 +208,8 @@
 											>
 											<Image
 												Margin="0,6,0,-6"
-												HorizontalAlignment="Center"
 												VerticalAlignment="Center"
-												Style="{DynamicResource ToolBarDeleteIcon}"
+												Style="{DynamicResource ToolBarDeleteIcon}" HorizontalAlignment="Center"
 												/>
 										</Button>
 										<Separator Margin="5,0,10,0" Style="{DynamicResource HideSeperatorOnNoImage}" />
@@ -746,7 +748,7 @@
 									Orientation="Horizontal"
 									>
 									<ToolBarTray Style="{DynamicResource DefaultToolBarTray}">
-										<ToolBar x:Name="supplierToolbar" Style="{DynamicResource DefaultToolBar}">
+										<ToolBar VerticalContentAlignment="Center" x:Name="supplierToolbar" Style="{DynamicResource DefaultToolBar}">
 											<Button
 												x:Name="btnNewProductSupplier"
 												Click="supplierToolbarButtonNew"
@@ -761,7 +763,7 @@
 												>
 												<Image IsEnabled="False" Style="{DynamicResource ToolBarSaveIcon}" />
 											</Button>
-											<Button
+											<Button VerticalContentAlignment="Center" Margin="0,6,0,-6"
 												x:Name="btnDeleteProductSupplier"
 												Click="SupplierToolbarButtonDelete"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Action.Tooltip.Delete}"
@@ -774,17 +776,18 @@
 								<!--#endregion-->
 
 								<DataGrid
-									x:Name="ProductSupplier_DataGrid"
+									x:Name="ProductSupplierDataGrid"
 									Grid.Row="1"
 									Margin="5,0"
 									Padding="3"
 									d:ItemsSource="{d:SampleData}"
 									AutoGenerateColumns="False"
-									IsReadOnly="True" SelectionChanged="Supplier_SelectionChanged"
+									IsReadOnly="True"
 									IsSynchronizedWithCurrentItem="True"
 									ItemsSource="{Binding ProductSupplierViewModel.FilteredSuppliers}"
 									SelectedIndex="1"
 									SelectedItem="{Binding ProductSupplierViewModel.SelectedSupplier}"
+									SelectionChanged="SupplierChanged"
 									VerticalScrollBarVisibility="Auto"
 									>
 									<DataGrid.Columns>
@@ -907,15 +910,18 @@
 											/>
 
 										<syncfusion:ComboBoxAdv
-											Grid.Row="1" x:Name="SupplierComboBox"
+											x:Name="SupplierComboBox"
+											Grid.Row="1"
 											Width="360"
 											HorizontalAlignment="Left"
+											AutoCompleteMode="Suggest"
+											DefaultText="{StaticResource Edit.Product.Tab.Supplier.Group.General.Supplier.Tag}"
 											DisplayMemberPath="SupplierName"
 											ItemsSource="{Binding SupplierViewModel.Supplier}"
 											SelectedValue="{Binding SupplierViewModel.SelectedSupplier.SupplierId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-											SelectedValuePath="SupplierId" AutoCompleteMode="Suggest"
-											DefaultText="{StaticResource Edit.Product.Tab.Supplier.Group.General.Supplier.Tag}"
-											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Supplier.Tooltip}"/>
+											SelectedValuePath="SupplierId"
+											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Supplier.Tooltip}"
+											/>
 										<!--#endregion-->
 
 										<!--#region Supplier part number-->
@@ -928,9 +934,10 @@
 											x:Name="SupplierProductNumber"
 											Grid.Row="3"
 											Width="360"
-											IsEnabled="True" Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierProductNumber}"
+											IsEnabled="True"
 											Style="{DynamicResource DefaultTextBox}"
 											Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.ProductNumberSupplier.Tag}"
+											Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierProductNumber}"
 											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.ProductNumberSupplier.Tooltip}"
 											/>
 										<!--#endregion-->
@@ -946,9 +953,10 @@
 											x:Name="SupplierProductName"
 											Grid.Row="5"
 											Width="360"
-											IsEnabled="True" Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierProductName}"
+											IsEnabled="True"
 											Style="{DynamicResource DefaultTextBox}"
 											Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.Description.Tag}"
+											Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierProductName}"
 											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Description.Tooltip}"
 											/>
 										<!--#endregion-->
@@ -971,9 +979,10 @@
 												VerticalContentAlignment="Center"
 												Background="#FFE5E5E5"
 												BorderBrush="{x:Null}"
-												IsReadOnly="True" Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierCurrencySymbol}"
+												IsReadOnly="True"
 												IsTabStop="False"
 												Style="{DynamicResource DefaultTextBox}"
+												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierCurrencySymbol}"
 												TextWrapping="Wrap"
 												/>
 
@@ -984,8 +993,9 @@
 												HorizontalContentAlignment="Right"
 												VerticalContentAlignment="Center"
 												IsEnabled="True"
-												Style="{DynamicResource DefaultTextBox}" Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierPrice, StringFormat={}{0:N2}, ConverterCulture='nl-NL', UpdateSourceTrigger=PropertyChanged}"
+												Style="{DynamicResource DefaultTextBox}"
 												Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.Price.Tag}"
+												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierPrice, StringFormat={}{0:N2}, ConverterCulture='nl-NL', UpdateSourceTrigger=PropertyChanged}"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Price.Tooltip}"
 												/>
 										</StackPanel>
@@ -1010,8 +1020,9 @@
 												Grid.Row="9"
 												Width="360"
 												IsEnabled="True"
-												Style="{DynamicResource DefaultTextBox}" Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierURL}"
+												Style="{DynamicResource DefaultTextBox}"
 												Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.Url.Tag}"
+												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierURL, UpdateSourceTrigger=PropertyChanged}"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Url.Tooltip}"
 												/>
 
@@ -1023,7 +1034,7 @@
 												x:Name="GotoWeb"
 												Width="AUTO"
 												HorizontalContentAlignment="Center"
-												Click="ButtonWeb"
+												Click="ButtonWeb" Visibility="{Binding Text, ElementName=SupplierProductUrl, Converter={StaticResource StringToVisibilityConverter}}"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.UrlButton.Tooltip}"
 												>
 												<Image
@@ -1045,7 +1056,8 @@
 
 										<CheckBox
 											x:Name="SupplierDefault"
-											Grid.Row="11" IsChecked="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierDefaultSupplierCheck}"
+											Grid.Row="11"
+											IsChecked="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierDefaultSupplierCheck}"
 											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.DefaultSupplier.Tooltip}"
 											/>
 										<!--#endregion-->
